R34
- fixed bug where orm_update generated wrong queries
R33
- added ORM system
- improved Windows XP compatibility (proven to work now)
- added parameter values to debug native log messages
- improved y_inline compatiblity code
- "orm_select" and "orm_insert" support y_inline (use "orm_select_inline" and "orm_insert_inline")
- added Cache-tags to cache_set_active, cache_save and cache_delete
- added natives "cache_get_row_count" and "cache_get_field_count"
- added more safety checks
- speed improvements
- fixed bug where mysql_free_result wasn't called internally if callback processing was skipped
- improved thread safety
- improved HTML-logging, reduced file size
- code cleanup
- rewrote the whole (multi-)threading system, multi-threading works now only per-connection (every connection has their own thread)
- added native "mysql_query" for unthreaded queries
- native "mysql_reconnect" no longer returns true if connection was successful and false if not, use "mysql_errno" instead
- improved makefile, use "make" to create a dynamic and static version, "make dynamic" and "make static" are self-explaining

R31
- added empty string checks to datatype conversion
- changed some details in the log system
- limited threads to 6

R30
- changed datatype conversion again (method in R29 was slow and still bugging)
- fixed some log messages
- fixed crash when unloading the plugin
- code improvements

R29
- fixed wrong function name logging in mysql_escape_string
- changed datatype conversion, it is now independent of the field data type
- fixed bug where automatic reconnect is always disabled

R28
- code improvements
- added more string checks
- added '%%' specifier to native 'mysql_format'
- fixed thread logic mistake
- fixed bug where saving and deleting the active result in the same callback would crash the server
- fixed bug where HTML log variables weren't initialized properly
- fixed bug where sending a query after a reconnect the old MySQL handle was used