@@ -1,5 +1,7 @@
 R34
 - fixed bug where orm_update generated wrong queries
+- fixed bug where queries sometimes lost connection to a remote database
+
 R33
 - added ORM system
 - improved Windows XP compatibility (proven to work now)
